# sundry

./: .env.development  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SELF_HOSTING.md  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: deploy_api.yml  deploy_jobs.yml  deploy_migrations.yml  deploy_website.yml
.helix/: languages.toml
crates/api/: Cargo.toml  model_config.toml
crates/api/open_api_files/: v1.json
crates/api/prompts/v1/: data_evaluator_v1.txt  data_evaluator_v2.txt  data_evaluator_v3.txt  data_evaluator_v4.txt  data_evaluator_v5.txt  data_selector_v1.txt  data_selector_v2.txt  github_issues_v2.txt  github_v1.txt  github_v2.txt  github_v3.txt  github_v4.txt  planner_v1.txt  planner_v2.txt  planner_v3.txt  planner_v4.txt  planner_v5.txt  planner_v6.txt  source_classifier_v1.txt.old  summarize_v1.txt  transform_v1.txt
crates/api/prompts/v1.1/: google_docs_v1.txt  planner_v1.txt  slack_v1.txt
crates/api/src/: lib.rs  main.rs  model.rs  utils.rs  v1.rs
crates/api/src/plan/: mod.rs
crates/api/src/plan/step/: mod.rs  return_data.rs  utils.rs
crates/api/src/plan/step/query/: github.rs  google_docs.rs  mod.rs  slack.rs
crates/api/tests/: api_tests.rs
crates/api/tests/fixtures/: github.sql  intermediary_data.sql  setup.sql  slack.sql  test_data.sql
crates/github_app_old/: Cargo.toml
crates/github_app_old/src/: main.rs
crates/github_ingest_old/: Cargo.toml
crates/github_ingest_old/src/: repository.rs
crates/github_types/: Cargo.toml
crates/github_types/src/: types.rs
crates/jobs/: Cargo.toml
crates/jobs/examples/: poll_github.rs
crates/jobs/src/: github.rs  lib.rs  main.rs  slack.rs
crates/jobs/src/github/: comments.rs  issues.rs  normalization.rs  pull_requests.rs  repositories.rs  tokens.rs
crates/jobs/src/slack/: channel_members.rs  channels.rs  conversations.rs  messages.rs  normalization.rs  replies.rs  users.rs
crates/models/: Cargo.toml
crates/models/src/: last_sync_time.rs  lib.rs  organization.rs  source.rs  user.rs
crates/models/src/api/: application.rs  application_key.rs  mod.rs  request.rs  user_key.rs  utils.rs
crates/models/src/auth/: session.rs
crates/models/src/github/: account.rs  app_installation.rs  comment.rs  issue.rs  label.rs  mod.rs  pull_request.rs  repository.rs  user.rs
crates/models/src/slack/: app_installation.rs  channel.rs  message.rs  mod.rs  user.rs
crates/website/: Cargo.toml  build.rs  tailwind.config.js
crates/website/.helix/: languages.toml
crates/website/src/: email.rs  error.rs  error_template.rs  lib.rs  main.rs  user.rs  utils.rs
crates/website/src/auth/: mod.rs  utils.rs
crates/website/src/components/atoms/: button.rs  copy.rs  dropdown.rs  loading.rs  mod.rs  slider.rs  table.rs  tag.rs
crates/website/src/components/molecules/: api_card.rs  footer.rs  mod.rs  modal.rs  source_card.rs  top_nav.rs
crates/website/src/components/pages/: home.rs  mod.rs
crates/website/src/components/pages/auth/: invite.rs  login.rs  mod.rs  sign_up.rs
crates/website/src/components/pages/auth/github/: callback.rs
crates/website/src/components/pages/auth/slack/: callback.rs
crates/website/src/components/pages/dashboard/: dashboard.rs  mod.rs
crates/website/src/components/pages/dashboard/organization/: demo.rs  developer.rs  index.rs  mod.rs
crates/website/src/components/pages/dashboard/organization/overview/: index.rs  invite.rs  mod.rs  sources.rs  user.rs
crates/website/src/components/pages/playground/: api_cards.rs  dropdown.rs  forms.rs  index.rs  mod.rs  routes.rs  source_cards.rs  table.rs  tags.rs
crates/website/style/: main.scss  tailwind.css
deploy/: router.js
deploy/api/: Dockerfile  fly.toml
deploy/jobs/: Dockerfile  Dockerfile.dockerignore  fly.toml
deploy/migrations/: Dockerfile  fly.toml
deploy/website/: Dockerfile  fly.toml
migrations/: 20240927215839_users_organizations.down.sql  20240927215839_users_organizations.up.sql  20240929201836_auth_base.down.sql  20240929201836_auth_base.up.sql  20240929201837_github_app_base.down.sql  20240929201837_github_app_base.up.sql  20241121213247_data_sources.down.sql  20241121213247_data_sources.up.sql  20241123163413_api_base.down.sql  20241123163413_api_base.up.sql  20241128015424_last_sync_time.down.sql  20241128015424_last_sync_time.up.sql  20241210210353_slack_app_base.down.sql  20241210210353_slack_app_base.up.sql
scripts/: create_test_user.sh  insert_test_user_data.sh  reset_database.sh  run.sh
scripts/slack/: oauth.py  requirements.txt
