[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "None"
description = ""
repository = ""

[workspace.dependencies]
anyhow = "1.0"
apalis = { version = "0.5", features = ["postgres", "layers", "cron"] }
async-openai = "0.26"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
regex = "1.11"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
toml = "0.8"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
