[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
dotenvy.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-openai.workspace = true
toml.workspace = true
reqwest.workspace = true

models = { path = "../models", features = ["ssr"] }

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true

[features]
integration = []
