[package]
name = "models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
argon2 = "0.5"

[dev-dependencies]
sqlx = { workspace = true }

[features]
ssr = ["dep:sqlx", "dep:base64", "dep:rand"]
